[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/ces_sequence-button_inner.png" type="Texture" id=1]
[ext_resource path="res://Sprites/ces_sequence-button_border.png" type="Texture" id=2]
[ext_resource path="res://RCAS/CES/SequenceButton.gd" type="Script" id=3]
[ext_resource path="res://RCAS/AreaClicked.gd" type="Script" id=4]

[node name="SequenceButton" type="Node2D"]
script = ExtResource( 3 )
OnColorName = "BLUE_COLOR"
OffColorName = "DARKBLUE_COLOR"

[node name="ces_sequence-button_border" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="ces_sequence-button_inner" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 16, 0, 18, 2, 18, 12, 16, 14, 2, 14, 0, 12, 0, 2, 2, 0 )
